--- a/registration_numbers.css
+++ b/registration_numbers.css
@@ -1,13 +1,4 @@
-body{
-    background-image: url(car1.jpg);
-    background-attachment: fixed;
-}
 
-#Reghead{
-    background-color:burlywood;
-    margin-left: 120px;
-    margin-right: 140px;
-}
 
 h1{
     color:black;
@@ -18,14 +9,41 @@ H2{
     font-size: 60px;
 }
 
-#enteredRegNumbers{
+#reg{
+    text-align: center;
+    width: 30em;
+    margin-left: 32em;
+    margin-right: 10px;
+}
+
+ #option{
+       text-align: center;
+       width: 30em;
+       /*margin-left: 34em;
+       margin-right: 10px;*/
+   }
+
+li{
+  list-style: none;
+     height: 50px;
+    width: 400px;
+    border-radius: 5px;
+    border: 4px solid black;
+     background-color: gold;
+    text-transform: uppercase;
+    font-size: 30px;
+    margin-bottom: 5px;
+   }
+
+
+/*#enteredRegNumbers{
     list-style-type: none;
 }
 #insert{
     height: 50px;
     width: 195px;
     font-size: px;
-    border: 20px solid black; 
+    border: 20px solid black;
 }
 
 
@@ -62,18 +80,10 @@ form{
 #reg{
     text-transform: uppercase;
 }
-#reg, #btname{
-    text-align: center;
-    height: 50px;
-    width: 400px;
-    position:relative;
-    bottom: -10px;
-    margin-left: 40px;
-    margin-right: 10px; 
-}
+
 #display{
     margin-left: 120px;
-    margin-right: 140px;   
+    margin-right: 140px;
     position: static;
 }
 #locations{
@@ -81,4 +91,4 @@ form{
     height: 50px;
     width: 400px;
     position:relative;
-}
+}*/
